[package]
name = "blog-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
axum = "0.7.4"
serde_json = "1.0"
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["full"] }
http = "1.0.0"
lazy_static = "1.4.0"
